examples/manual/failing/RedefinedFixity.purs
module RedefinedFixity where

import Prelude

(!?) x y = x + y

infix 2 !?
infix 2 !?
